--- a/css/custom.css
+++ b/css/custom.css
@@ -632,7 +632,9 @@ input[type=file]:focus, input[type=checkbox]:focus, input[type=radio]:focus {
 
 .header {
   height: 60px;
-  line-height: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background: #DD4B39;
   border: 1px #DD4B39 dashed;
   border-radius: 4px;
@@ -842,3 +844,67 @@ input[type=file]:focus, input[type=checkbox]:focus, input[type=radio]:focus {
   height: 532px;
   /*margin: 0px auto 15px auto;*/
 }
+
+.targetEle {
+  /* width: inherit; */
+  display: none;
+  position: absolute;
+  z-index: 2;
+}
+
+.hamburger {
+  font-size: 40px;
+  margin: 0px;
+  width: 100%;
+}
+
+.btn-hamburger {
+  background: transparent;
+}
+
+button[class="btn-hamburger"]:focus {
+  background: transparent;
+}
+
+.collapse {
+  visibility: hidden;
+}
+
+.collapse.in {
+  visibility: visible;
+}
+
+.collapsing {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+  -webkit-transition-property: height, visibility;
+  transition-property: height, visibility;
+  -webkit-transition-duration: 0.35s;
+  transition-duration: 0.35s;
+  -webkit-transition-timing-function: ease;
+  transition-timing-function: ease;
+}
+
+.collapsing.width {
+  -webkit-transition-property: width, visibility;
+  transition-property: width, visibility;
+  width: 0;
+  height: auto;
+}
+
+#overlayPnl {
+  display: none;
+  position: fixed;
+  /* top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0; */
+  /* width: inherit; */
+  height: 100%;
+  background-color: gray;
+  z-index: 2;
+  cursor: pointer;
+}
+
+.main-content {}
