--- a/css/custom.css
+++ b/css/custom.css
@@ -861,6 +861,7 @@ input[type=file]:focus, input[type=checkbox]:focus, input[type=radio]:focus {
 
 .btn-hamburger {
   background: transparent;
+  border: none;
 }
 
 button[class="btn-hamburger"]:focus {
